feat: 결제 단계가 원자적으로 작동하도록 수정
- 재고, 포인트 처리 등 하나라도 작업이 실패하면 모두 롤백처리
- 결제 정보는 저장