@@ -5,7 +5,9 @@ import com.loopers.domain.order.OrderLine;
 import com.loopers.domain.order.OrderService;
 import com.loopers.domain.payment.PaymentFailureReason;
 import com.loopers.domain.payment.PaymentService;
+import com.loopers.domain.point.Point;
 import com.loopers.domain.point.PointService;
+import com.loopers.domain.product.Product;
 import com.loopers.domain.product.ProductCommand;
 import com.loopers.domain.product.ProductService;
 import com.loopers.support.error.CoreException;
@@ -15,6 +17,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
@@ -24,45 +28,59 @@ public class PaymentUseCase {
     private final ProductService productService;
     private final PointService pointService;
     private final PaymentService paymentService;
+    private final PaymentFailureHandler failureHandler;
 
-    @Transactional(noRollbackFor = CoreException.class)
+    @Transactional
     public PaymentResult.Pay pay(Long userId, PaymentInfo.Pay payInfo) {
-        // 0. 주문 조회 및 수량 확인
-        Order order = orderService.getUserOrder(userId, payInfo.orderId());
-        List<OrderLine> orderLines = order.getOrderLines();
+        try {
+            return tryPayment(userId, payInfo);
+        } catch (CoreException e) {
+            failureHandler.handle(userId, payInfo, PaymentFailureReason.fromMessage(e.getMessage()));
+            throw e;
+        }
+    }
 
-        List<ProductCommand.CheckStock> checkStocksCommand = orderLines.stream()
-                .map(orderLine ->
-                        ProductCommand.CheckStock.of(orderLine.getProductId(), orderLine.getQuantity()))
-                .collect(Collectors.toList()
-                );
+    @Transactional
+    public PaymentResult.Pay tryPayment(final Long userId, final PaymentInfo.Pay payInfo) {
+        // 주문 조회
+        final Order order = orderService.getUserOrder(userId, payInfo.orderId());
+        final List<OrderLine> orderLines = order.getOrderLines();
+
+        // OrderLine에서 상품 및 수량 확인
+        List<Long> productIds = orderLines.stream()
+                .map(OrderLine::getId)
+                .toList();
 
         // 1. 재고 차감
-        if (!productService.deductStock(checkStocksCommand)) {
-            throwPaymentFailure(order, payInfo, PaymentFailureReason.OUT_OF_STOCK);
+        List<Product> products = productService.findAllValidProductsOrThrow(productIds);
+
+        // Product 매핑을 위한 Map 생성
+        Map<Long, Product> productMap = products.stream()
+                .collect(Collectors.toMap(Product::getId, Function.identity()));
+        List<ProductCommand.DeductStock> deductStocksCommand = orderLines.stream()
+                .map(orderLine -> {
+                    Product product = productMap.get(orderLine.getProductId());
+                    return ProductCommand.DeductStock.of(product, orderLine.getQuantity());
+                })
+                .collect(Collectors.toList());
+
+        if (!productService.deductStock(deductStocksCommand)) {
+            throw new CoreException(ErrorType.CONFLICT, PaymentFailureReason.OUT_OF_STOCK.getMessage());
         }
 
         // 2. 포인트 결제
-        if (!pointService.use(userId, order.getPaymentAmount())) {
-            throwPaymentFailure(order, payInfo, PaymentFailureReason.INSUFFICIENT_BALANCE);
-        }
+        Point point = pointService.findByUser(userId);
+        pointService.useOrThrow(point, order.getPaymentAmount());
 
         // 3. 결제 성공 처리
         boolean isOrderConfirm = true;
         orderService.finalizeOrderResult(order, isOrderConfirm);
-        Long paymentId = paymentService.saveSuccess(payInfo.orderId(), payInfo.paymentMethod(), order.getPaymentAmount());
+        Long paymentId = paymentService.saveSuccess(
+                payInfo.orderId(),
+                payInfo.paymentMethod(),
+                order.getPaymentAmount()
+        );
 
         return PaymentResult.Pay.of(paymentId);
     }
-
-    // 공통 실패 처리 메서드
-    private PaymentResult.Pay throwPaymentFailure(Order order, PaymentInfo.Pay payInfo, PaymentFailureReason failureReason) {
-        boolean isOrderConfirm = false;
-        orderService.finalizeOrderResult(order, isOrderConfirm);
-
-        paymentService.saveFailure(payInfo.orderId(), payInfo.paymentMethod(), order.getPaymentAmount(), failureReason);
-
-        throw new CoreException(ErrorType.CONFLICT, failureReason.getMessage());
-    }
-
 }
